--- a/styles/style.css
+++ b/styles/style.css
@@ -43,11 +43,12 @@ img {
     top: 0;
 }
 
-/* h1 {
-    color : #412124;
-
-
-} */
+h1 {
+    font-size: 50px;
+    color:white;
+    user-select: none;
+    position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)
+}
 
 h3 {
     color : #0d0d0c;
@@ -67,9 +68,14 @@ a:hover {
     background-size: cover;
 }
 
-h1 {
-    font-size: 50px;
-    color:white;
-    user-select: none;
-    position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)
+.logo-img {
+    position: relative;
+}
+
+.logo-img > img {
+    position: relative;
+    width: 7%;
+    height: auto;
+    top: 20px;
+    left: 20px;
 }
